Don't pixel-snap overflow clips in clip paint property nodes.

Pixel-snapping should be applied at "paint" time instead, based on context
which includes subpixel accumulation.

Also, adds code to apply subpixel accumulation for overflow clip rects applied
to background clip rects.

BUG=691959
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2701523003
Cr-Commit-Position: refs/heads/master@{#451189}

Former-commit-id: 19b6d116165378bc06ae204d74b5b1da58caa9ab